# email_newsletter

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20240605101755_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
